Patches overflow issue on sidebar when panel active.

--- a/ui/src/components/collection.pcss
+++ b/ui/src/components/collection.pcss
@@ -41,6 +41,7 @@
 	}
 	&.active{
 		.sidebar{
+			overflow-y: hidden;
 			> div {
 				transform:translate(-100%, 0);
 			}
